tests/failparse1.parse.err
 --> tests/failparse1.v:1:1
  |
1 | Definitionx:Prop:=Prop
  | ^
  |
  = parsing error: expected EOI, keyword_definition, or keyword_axiom